apps/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/hostname: flux
    tailscale.com/funnel: "true"
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: tailscale
  rules:
    - host: &host "flux.${TAILSCALE_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
